# intel-8086-disassembler

./: .gitignore  CHANGELOG.md  fourmolu.yaml  hie.yaml  sim8086.cabal  stack.yaml
src/: Main.hs  more_movs_binary.asm  more_movs_result.asm
