cabal-version:       2.2

name:                sim8086
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/sim8086#readme
license:             BSD-3-Clause
license-file:        license
author:              Author name here
maintainer:          example@example.com
copyright:           2024 Author name here
category:            Web
build-type:          Simple
extra-source-files:  readme.md
                     changelog.md

custom-setup
  setup-depends:       base, Cabal

executable sim8086
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, bytestring, containers, string-interpolate
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
